replaced single spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ html {
 }
 
 .polaroid:first-child {
-  left: 20%
+  left:20%;
   top:100px;
   transform: rotate(-12deg);
   z-index: 1;
